# CleanCode

./: .gitignore  LICENSE  README.md
Doc/: CleanCode.chm  Doxyfile  footer.html  footer.html.bak  header.html  header.html.bak
clean_code_checker/: CMakeLists.txt  README.md
clean_code_checker/include/: analyzer.h  json_formatter.h
clean_code_checker/lib/: CMakeLists.txt
clean_code_checker/lib/include/: analyzer.h  file_reader.h  json_formatter.h
clean_code_checker/lib/src/: analyzer.c  file_reader.c  json_formatter.c
clean_code_checker/main/: CMakeLists.txt  main.c
clean_code_checker/output/: report.json  result.json
clean_code_checker/src/: analyzer.c  json_formatter.c  main.c
clean_code_checker/test_files/: example.c  example.cpp
